--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header class="globalHeader">
-        <form class="searchForm" action="https://www.baidu.com/s" method="get" target="_blank">
+        <form id="searchForm" class="searchForm" action="https://www.baidu.com/s" method="get" target="_blank">
             <input name="wd" type="text">
             <button type="submit">搜索</button>
         </form>
